--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@
   header{
   	font-size: 30px;
   }
+  /*To hide the content when screen size gets small*/
+  .ingredients{
+  	display:none;
+  }
 }
 body{
 	margin:0;
